Added overlay for mobile users

--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+    <div class="overlay">Mobile is not yet supported. Please use your computer instead.</div>
     <div class="div-top" id="div_top">
         <div style="display: flex; justify-content: center;">
             <div style="color: white;" class="div-time" id="div_time"></div>
