--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="overlay">Mobile is not yet supported. Please use your computer instead.</div>
     <div class="div-login-main">
         <div>
             <button onclick="Toggle(2)" id="button-back">BACK</button>
