--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/manage.css">
     <link rel="stylesheet" href="styles/media.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- "defer" enables the script to be added on the head tag and it runs the page faster. It is like DOMContentLoaded -->
 
