Added eventlistener to menu icon.

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
             <button class="button-logout" onclick="TopButtons(0)">LOGOUT</button>
         </div>
         <div class="div-menu">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" id="menu-icon">
                 menu
                 </span>
         </div>
