--- a/home.html
+++ b/home.html
@@ -146,6 +146,12 @@
         </div>
         
         <div class="div-manage-right" id="div_manage_right">
+            <div class="div-add">
+                <span class="material-symbols-outlined" id="plus-icon">
+                    add
+                </span>
+    
+            </div>
             <table class="manage-table" id="manage_table">
                 <tr class="manage-tableRow-head" id="manage_tableRow-head">
                     <th class="manage-tableHead-headID" id="manage_tableHead_headID">PRODUCT ID</th>
