--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <!-- <div class="overlay">Mobile is not yet supported. Please use your computer instead.</div> -->
+    <div class="overlay"></div>
     <div class="div-top" id="div_top">
         
         <div style="color: white;" class="div-time" id="div_time"></div>
@@ -126,6 +126,7 @@
     <div class="container-manage" id="container_manage">
         <div class="div-manage-left" id="div_manage_left">
             <div class="div-left-top-buttons" id="div_left_top_buttons">
+                <div></div>
                 <input type="reset" class="top-button-add" id="top_button_add" onclick="AddButton()" value="ADD">
                 <input type="reset" class="top-button-edit" id="top_button_edit" onclick="EditButton()" value="EDIT">
                 <input type="reset" class="top-button-delete" id="top_button_delete" onclick="DeleteButton()" value="DELETE">
