Added test credential.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <div class="div-login-form">
             
             <form class="form-login-lform" id="form_login_lform" align="center">
+                <p>username: test</p>
+                <p>password: test</p>
                 <input placeholder="USERNAME" style="text-align: center; border: none; color: green; height: 3rem; border-radius: 0.5rem; margin-top: 0.25rem;" type="text" id="input_login_username" class="input-login-username"><br>
                 <input placeholder="PASSWORD" style="text-align: center; border: none; color: green; height: 3rem; border-radius: 0.5rem; margin-top: 0.75rem;" type="password" id="input_login_password" class="input-login-password"><br>
                 <input type="checkbox" onclick="ShowPassword('input_login_password')">Show Password</input> <br>
