Fixed media player.

--- a/home.html
+++ b/home.html
@@ -95,8 +95,16 @@
                 <video class="video-view" id="video_view" controls>
                 </video>
                 <img class="image-view" id="image_view"> 
-                <button class="previous-button" id="previous_button">PREV</button>
-                <button class="next-button" id="next_button">NEXT</button>
+                <button class="previous-button" id="previous_button">
+                    <span class="material-symbols-outlined">
+                        skip_previous
+                        </span>
+                </button>
+                <button class="next-button" id="next_button">
+                    <span class="material-symbols-outlined">
+                        skip_next
+                        </span>
+                </button>
             </div>  
         </div>
         <div class="div-media-right">
@@ -116,7 +124,7 @@
             </div>
             <div class="div-video" id="div_video">No available video.</div>
             <div class="div-music" id="div_music">No available music.</div>
-            <div class="div-photo" id="div_photo">No available images.</div>
+            <div class="div-photo" id="div_photo">No available image.</div>
 
         </div>
         
