--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script defer src="scripts/login.js"></script>
+    <script defer type="module" src="scripts/login.js">  
+    </script>
+    <script defer type="module" src="scripts/firebase.js"></script>
+    <script defer type="module">
+        import { Toggle, ShowPassword } from '/scripts/login.js'
+        window.Toggle = Toggle
+        window.ShowPassword = ShowPassword
+    </script>
 </head>
 
 <body>
@@ -33,6 +40,10 @@
                 
                 <div style="margin-top: 0.75rem;"><p1><a href="#" onclick="Toggle(0)">Forgot Password</a></p1></div>
                 <div style="margin-top: 0.78rem;"><p1>No account yet? <span><a onclick="Toggle(1)" href="#">Signup</a></span></p1></div> <br>
+                <p>Or signin with:</p><br>
+                
+                <svg class="google-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50" height="50"><defs><path id="a" d="M44.5 20H24v8.5h11.8C34.7 33.9 30.1 37 24 37c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.1 0 5.9 1.1 8.1 2.9l6.4-6.4C34.6 4.1 29.6 2 24 2 11.8 2 2 11.8 2 24s9.8 22 22 22c11 0 21-8 21-22 0-1.3-.2-2.7-.5-4z"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="#FBBC05" d="M0 37V11l17 13z"/><path clip-path="url(#b)" fill="#EA4335" d="m0 11 17 13 7-6.1L48 14V0H0z"/><path clip-path="url(#b)" fill="#34A853" d="m0 37 30-23 7.9 1L48 0v48H0z"/><path clip-path="url(#b)" fill="#4285F4" d="M48 48 17 24l-4-3 35-10z"/></svg>
+
                 <input type="reset" id="input_login_loginButton" class="input-login-loginButton" value="LOGIN">
                 <!-- <fildset>
                 <legend>Login</legend>
@@ -50,17 +61,18 @@
 
             </form>
             <form class="form-login-sform" id="form_login_sform" align="center">
-                <input placeholder="PREFERRED USERNAME" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_username" class="input-signup-username"><br>
-                <input placeholder="FIRST NAME" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_firstname" class="input-signup-firstname"><br>
-                <input placeholder="LAST NAME" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_lastname" class="input-signup-lastname"><br>
-                <input placeholder="SET PASSWORD" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="password" id="input_signup_password" class="input-signup-password"><br>
+                <input placeholder="PREFERRED USERNAME" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_username" class="input-signup-username" required><br>
+                <input placeholder="YOUR EMAIL ADDRESS" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="email" id="input_signup_email" class="input-signup-email" required><br>
+                <input placeholder="FIRST NAME" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_firstname" class="input-signup-firstname" required><br>
+                <input placeholder="LAST NAME" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_lastname" class="input-signup-lastname" required><br>
+                <input placeholder="SET PASSWORD" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="password" id="input_signup_password" class="input-signup-password" required><br>
                 <input type="checkbox" onclick="ShowPassword('input_signup_password')">Show Password<br>
-                <input placeholder="CONFIRM PASSWORD" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="password" id="input_signup_confirmPassword" class="input-signup-confirmPassword"><br>
+                <input placeholder="CONFIRM PASSWORD" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="password" id="input_signup_confirmPassword" class="input-signup-confirmPassword" required><br>
                 <input type="checkbox" onclick="ShowPassword('input_signup_confirmPassword')">Show Password <br>
-                <input placeholder="MOBILE NUMBER" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="tel" id="input_signup_mobileNumber" class="input-signup-mobileNumber"><br>
+                <input placeholder="MOBILE NUMBER" style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="tel" id="input_signup_mobileNumber" class="input-signup-mobileNumber" required><br>
 
                 <div style="margin-top: 10px; margin-bottom: 5px ">
-                <select id="signup_security_questions"><br>
+                <select id="signup_security_questions" required><br>
                     <option selected disabled>Security Question</option>
                     <option>What is your favorite color?</option>
                     <option>What is the name of your first pet?</option>
@@ -71,7 +83,7 @@
                     <option>What is the name of your childhood bestfriend?</option>
                 </select>
                 </div><br>
-                <input style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_createSecurityAnswer" class="input-signup-createSecurityAnswer" placeholder="Security Answer"><br>
+                <input style="text-align: center; border: none; color: green; height: 2.5rem; border-radius: 0.5rem; margin-top: 0.5rem;" type="text" id="input_signup_createSecurityAnswer" class="input-signup-createSecurityAnswer" placeholder="Security Answer" required><br>
                 <div style="margin-top: 30px;"><p1>Already has an account? <span><a onclick="Toggle(2)" href="#">Login</a></span></p1></div> <br>
 
                 <input type="button" id="input_signup_signupButton" class="input-signup-signupButton" value="SIGNUP">
